# ansible-collection-remnawave-panel

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ansible_collections/ilyagulya/remnawave/: .ansible-lint  CHANGELOG.rst  README.md  galaxy.yml  test-requirements.txt  tox-ansible.ini
ansible_collections/ilyagulya/remnawave/docs/api_reference/: config_profile_all_options.yml  node_all_options.yml
ansible_collections/ilyagulya/remnawave/examples/: README.md  multi_hop.yml  multi_region_multi_hop.yml  single_node.yml
ansible_collections/ilyagulya/remnawave/examples/advanced/: check_mode.yml  multi_region_nodes.yml
ansible_collections/ilyagulya/remnawave/examples/basic/: config_profile_create.yml  config_profile_delete.yml  config_profile_update.yml  node_create.yml  node_delete.yml  node_update.yml
ansible_collections/ilyagulya/remnawave/examples/vars/: production_vars.yml
ansible_collections/ilyagulya/remnawave/examples/workflows/: production_setup.yml  production_teardown.yml  setup_infrastructure.yml  teardown_infrastructure.yml
ansible_collections/ilyagulya/remnawave/extensions/molecule/e2e/: converge.yml  destroy.yml  docker-compose.yml  molecule.yml  verify.yml
ansible_collections/ilyagulya/remnawave/extensions/molecule/e2e/inventory/host_vars/: localhost.yml
ansible_collections/ilyagulya/remnawave/extensions/molecule/e2e/tasks/: cleanup.yml  config_profile.yml  error_handling.yml  node.yml
ansible_collections/ilyagulya/remnawave/extensions/molecule/e2e/templates/: env.e2e.j2
ansible_collections/ilyagulya/remnawave/plugins/module_utils/: remnawave.py
ansible_collections/ilyagulya/remnawave/plugins/modules/: config_profile.py  node.py
ansible_collections/ilyagulya/remnawave/tests/sanity/: ignore-2.18.txt
ansible_collections/ilyagulya/remnawave/tests/unit/plugins/module_utils/: test_remnawave.py
ansible_collections/remnawave/panel/: .ansible-lint  README.md  galaxy.yml
ansible_collections/remnawave/panel/examples/: README.md
ansible_collections/remnawave/panel/examples/advanced/: check_mode.yml  multi_region_nodes.yml
ansible_collections/remnawave/panel/examples/basic/: config_profile_create.yml  config_profile_delete.yml  config_profile_update.yml  node_create.yml  node_delete.yml  node_update.yml
ansible_collections/remnawave/panel/examples/vars/: example_vars.yml  production_vars.yml
ansible_collections/remnawave/panel/examples/workflows/: production_setup.yml  production_teardown.yml  setup_infrastructure.yml  teardown_infrastructure.yml
ansible_collections/remnawave/panel/extensions/molecule/e2e/: converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
ansible_collections/remnawave/panel/extensions/molecule/e2e/inventory/host_vars/: localhost.yml
ansible_collections/remnawave/panel/extensions/molecule/e2e/tasks/: cleanup.yml  config_profile.yml  error_handling.yml  node.yml
ansible_collections/remnawave/panel/extensions/molecule/e2e/vars/: test_data.yml
ansible_collections/remnawave/panel/meta/: version_info.yml
ansible_collections/remnawave/panel/plugins/module_utils/: remnawave.py
ansible_collections/remnawave/panel/plugins/modules/: config_profile.py  node.py
ansible_collections/remnawave/panel/tests/sanity/: ignore-2.18.txt
ansible_collections/remnawave/panel/tests/unit/: conftest.py
ansible_collections/remnawave/panel/tests/unit/plugins/module_utils/: test_remnawave.py
api-spec/: api-1.yaml
collection/: galaxy.yml
collection/examples/advanced/: multi_region_nodes.yml
collection/examples/basic/: config_profile_delete.yml  node_delete.yml  node_update.yml
collection/examples/workflows/: teardown_infrastructure.yml
collection/plugins/module_utils/: remnawave.py
collection/plugins/modules/: config_profile.py  node.py  rw_config_profile.py  rw_node.py
collection/tests/sanity/: ignore-2.18.txt
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
molecule/e2e/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
scripts/: check-freshness.sh  e2e-setup.sh  e2e-teardown.sh
src/remnawave_ansible_gen/: __init__.py  api_reference.py  cli.py  config.py  config.yaml  discovery.py  examples.py  generate.py  models.py  rendering.py  schema.py  utils.py  version.py
src/remnawave_ansible_gen/templates/: module.py.j2  module_utils.py.j2
src/remnawave_ansible_gen/templates/api_reference/: all_options.yml.j2
src/remnawave_ansible_gen/templates/examples/: README.md.j2  advanced_check_mode.yml.j2  advanced_multi_region.yml.j2  basic_create.yml.j2  basic_delete.yml.j2  basic_update.yml.j2  vars_example.yml.j2  workflow_production_setup.yml.j2  workflow_production_teardown.yml.j2  workflow_setup.yml.j2  workflow_teardown.yml.j2
src/remnawave_ansible_gen/templates/examples/snippets/: config_profile_create.yml  config_profile_update.yml  node_create.yml  node_update.yml
