[project]
name = "remnawave-ansible-gen"
version = "0.1.0"
description = "Generator for Remnawave Ansible modules"
requires-python = ">=3.11"
dependencies = [
    "prance>=25.4.8.0",
    "openapi-spec-validator>=0.7.2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
generate = "remnawave_ansible_gen.cli:main"
version = "remnawave_ansible_gen.version:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remnawave_ansible_gen"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ansible_collections/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
files = ["src/remnawave_ansible_gen"]

[[tool.mypy.overrides]]
module = [
    "prance",
    "prance.*",
    "openapi_spec_validator",
    "openapi_spec_validator.*",
    "jinja2",
    "jinja2.*",
    "yaml",
    "yaml.*",
]
ignore_missing_imports = true

# === PIXI CONFIGURATION ===

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"

[tool.pixi.pypi-dependencies]
remnawave-ansible-gen = { path = ".", editable = true }

# Pinned development tools
[tool.pixi.feature.dev.pypi-dependencies]
ruff = "~=0.14.0"
mypy = "~=1.19.0"
tox-ansible = "~=26.1.0"
ansible-lint = "~=26.1.0"
molecule = "~=25.12.0"
molecule-docker = "~=2.1.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
generate = "generate"
generate-dry-run = "generate --dry-run"
version-check = "version check"
check-freshness = "bash scripts/check-freshness.sh"

[tool.pixi.feature.dev.tasks]
lint = "ruff check src/"
lint-fix = "ruff check --fix src/"
format = "ruff format src/"
format-check = "ruff format --check src/"
typecheck = "mypy src/"
ansible-lint = { cmd = "ansible-lint", cwd = "ansible_collections/remnawave/panel", env = { ANSIBLE_COLLECTIONS_PATH = "../../.." } }
molecule-test = { cmd = "molecule test -s e2e", cwd = "ansible_collections/remnawave/panel" }
molecule-create = { cmd = "molecule create -s e2e", cwd = "ansible_collections/remnawave/panel" }
molecule-converge = { cmd = "molecule converge -s e2e", cwd = "ansible_collections/remnawave/panel" }
molecule-verify = { cmd = "molecule verify -s e2e", cwd = "ansible_collections/remnawave/panel" }
molecule-destroy = { cmd = "molecule destroy -s e2e", cwd = "ansible_collections/remnawave/panel" }
check = { depends-on = ["lint", "typecheck", "version-check"] }

# tox-ansible tasks
tox-list = { cmd = "tox list --ansible --conf tox-ansible.ini", cwd = "ansible_collections/remnawave/panel" }
tox-matrix-sanity = { cmd = "tox --ansible --gh-matrix --matrix-scope sanity --conf tox-ansible.ini", cwd = "ansible_collections/remnawave/panel" }
tox-matrix-unit = { cmd = "tox --ansible --gh-matrix --matrix-scope unit --conf tox-ansible.ini", cwd = "ansible_collections/remnawave/panel" }
tox-sanity = { cmd = "tox --ansible -e {{ env }} --conf tox-ansible.ini", cwd = "ansible_collections/remnawave/panel", args = ["env"] }
tox-unit = { cmd = "tox --ansible -e {{ env }} --conf tox-ansible.ini", cwd = "ansible_collections/remnawave/panel", args = ["env"] }
